channel authentication (3 message system, but not encrypted yet)

--- a/dslab3/src/log4j.properties
+++ b/dslab3/src/log4j.properties
@@ -1,7 +1,7 @@
 # Set root logger level to DEBUG and its only appender to STD.
-log4j.rootLogger=ERROR, SIMPLE
-log4j.logger.auctionServer=ERROR
-log4j.logger.client=ERROR
+log4j.rootLogger=DEBUG, SIMPLE
+log4j.logger.auctionServer=DEBUG
+log4j.logger.client=DEBUG
 log4j.logger.loadTestingComponent=ERROR
 
 # SIMPLE, DETAIL is set to be a ConsoleAppender.
